tests/admission-webhook/webhook/overlays/application/test_data/expected/default_app.k8s.io_v1beta1_application_webhook.yaml
apiVersion: app.k8s.io/v1beta1
kind: Application
metadata:
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: webhook-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: webhook
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
  name: webhook
spec:
  addOwnerRef: true
  componentKinds:
  - group: core
    kind: ConfigMap
  - group: apps
    kind: StatefulSet
  - group: core
    kind: Service
  - group: core
    kind: ServiceAccount
  descriptor:
    description: injects volume, volume mounts, env vars into PodDefault
    keywords:
    - admission-webhook
    - kubeflow
    links:
    - description: About
      url: https://github.com/kubeflow/kubeflow/tree/master/components/admission-webhook
    maintainers: []
    owners: []
    type: bootstrap
    version: v1beta1
  selector:
    matchLabels:
      app.kubernetes.io/component: bootstrap
      app.kubernetes.io/instance: webhook-v1.0.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: webhook
      app.kubernetes.io/part-of: webhook
      app.kubernetes.io/version: v1.0.0
