tests/admission-webhook/webhook/overlays/application/test_data/expected/kubeflow_apps_v1_deployment_admission-webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admission-webhook
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: webhook-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: webhook
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: admission-webhook
  name: admission-webhook-deployment
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: admission-webhook
      app.kubernetes.io/component: webhook
      app.kubernetes.io/instance: webhook-v0.7.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: webhook
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: v0.7.0
      kustomize.component: admission-webhook
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: admission-webhook
        app.kubernetes.io/component: webhook
        app.kubernetes.io/instance: webhook-v0.7.0
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: webhook
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: v0.7.0
        kustomize.component: admission-webhook
    spec:
      containers:
      - image: gcr.io/kubeflow-images-public/admission-webhook:vmaster-gaf96e4e3
        name: admission-webhook
        volumeMounts:
        - mountPath: /etc/webhook/certs
          name: webhook-cert
          readOnly: true
      serviceAccountName: admission-webhook-service-account
      volumes:
      - name: webhook-cert
        secret:
          secretName: webhook-certs
