tests/admission-webhook/webhook/overlays/application/test_data/expected/kubeflow_~g_v1_serviceaccount_admission-webhook-service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: admission-webhook
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: webhook-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: webhook
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: admission-webhook
  name: admission-webhook-service-account
  namespace: kubeflow
